--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -188,16 +188,13 @@
   footer .social-links a {
     margin: 0 20px;
     color: var(--branding-color);
-    background: var(--secondary-color);
-    padding: 10px 14px;
-    border-radius: 50%;
+    background: white;
     font-size: 18px;
     transition: all 100ms ease-in-out;
   }
   
   footer .social-links a:hover {
-    color: white;
-    background: var(--branding-color);
+    background: white;
   }
   
   @media (max-width: 900px) {
