--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -210,7 +210,12 @@
     h3 {
       font-size: 26px;
     }
-  
+    
+    .hero p {
+    font-size: 30px;
+    font-weight: normal;
+    }
+
     .content {
       text-align: center;
       padding: 0;
