--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -132,8 +132,17 @@
   .img-fluid {
     max-width: 80%;
     height: auto;
+    margin-left: 8vh;
 }
 
+  .project-desciption {
+    padding-top: 30vh;
+  } 
+
+  .text-muted{
+    font-size: 25px;
+  }
+  
   nav {
     padding: 20px 0;
   }
